control de errorers y foto

--- a/src/app/component/producto/producto.admin.create.routed/producto.admin.create.routed.component.html
+++ b/src/app/component/producto/producto.admin.create.routed/producto.admin.create.routed.component.html
@@ -24,6 +24,10 @@
             <mat-error> El nombre debe ser mas corto </mat-error>
             }
           </mat-form-field>
+          <div>
+            <label for="imagen">Imagen del Producto</label>
+            <input type="file" id="imagen" (change)="onFileSelect($event)" accept="image/*" formControlName="imagen" />
+          </div>
         </div>
         <br />
         <button
