--- a/src/app/component/proveedor/proveedor.admin.create.routed/proveedor.admin.create.routed.component.html
+++ b/src/app/component/proveedor/proveedor.admin.create.routed/proveedor.admin.create.routed.component.html
@@ -1,3 +1,133 @@
-<p>
-  proveedor.admin.create.routed works!
-</p>
+<div class="container-fluid py-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-8 col-md-10 col-sm-12">
+      <div class="card border-0 shadow-lg">
+        <div class="card-header bg-primary text-white text-center">
+          <h2 class="fw-bold">
+            <i class="bi bi-person-circle"></i> Edición de Proveedor <i class="bi bi-pencil"></i>
+          </h2>
+        </div>
+        <div class="card-body">
+          <form [formGroup]="oProveedorForm!" (ngSubmit)="onSubmit()" novalidate>
+            <div class="mb-3">
+              <label for="id" class="form-label fw-bold">Id</label>
+              <input
+                type="text"
+                id="id"
+                class="form-control"
+                formControlName="id"
+                placeholder="id"
+                readonly
+              />
+              <div class="form-text">No se puede cambiar.</div>
+            </div>
+
+            <div class="mb-3">
+              <label for="Empresa" class="form-label fw-bold">Empresa</label>
+              <input
+                type="text"
+                id="empresa"
+                class="form-control"
+                formControlName="empresa"
+                placeholder="Empresa"
+              />
+              <div *ngIf="oProveedorForm?.get('Empresa')?.errors" class="text-danger">
+                <small *ngIf="oProveedorForm?.get('Empresa')?.hasError('required')">Debes introducir un Empresa.</small>
+                <small *ngIf="oProveedorForm?.get('Empresa')?.hasError('minlength')">El Empresa es demasiado corto.</small>
+                <small *ngIf="oProveedorForm?.get('Empresa')?.hasError('maxlength')">El Empresa es demasiado largo.</small>
+              </div>
+            </div>
+
+            <div class="mb-3">
+              <label for="Email" class="form-label fw-bold">Email</label>
+              <input
+                type="text"
+                id="email"
+                class="form-control"
+                formControlName="email"
+                placeholder="Email"
+              />
+              <div *ngIf="oProveedorForm?.get('Email')?.errors" class="text-danger">
+                <small *ngIf="oProveedorForm?.get('Email')?.hasError('required')">Debes introducir un Email.</small>
+                <small *ngIf="oProveedorForm?.get('Email')?.hasError('minlength')">El Email es demasiado corto.</small>
+                <small *ngIf="oProveedorForm?.get('Email')?.hasError('maxlength')">El Email es demasiado largo.</small>
+              </div>
+            </div>
+
+            <div class="mb-3">
+              <label for="Password" class="form-label fw-bold">Password</label>
+              <input
+                type="text"
+                id="Password"
+                class="form-control"
+                formControlName="Password"
+                placeholder="Password"
+              />
+              <div *ngIf="oProveedorForm?.get('Password')?.errors" class="text-danger">
+                <small *ngIf="oProveedorForm?.get('Password')?.hasError('required')">Debes introducir un Password.</small>
+                <small *ngIf="oProveedorForm?.get('Password')?.hasError('minlength')">El Password es demasiado corto.</small>
+                <small *ngIf="oProveedorForm?.get('Password')?.hasError('maxlength')">El Password es demasiado largo.</small>
+              </div>
+            </div>
+           
+            <div class="mt-4 d-flex justify-content-evenly">
+              <button
+              class="btn btn-warning mt-4 mx-1"
+              type="button"
+              [routerLink]="['/admin','proveedor', 'plist']"
+            >
+              <i class="bi bi-list"></i> Ir a listado de Proveedores
+            </button>
+              <button class="btn btn-secondary mt-4 mx-1" type="reset" (click)="onReset()">
+                <i class="bi bi-x-lg"></i> Reset
+              </button>
+              <button
+                class="btn btn-success mt-4 mx-1"
+                type="submit"
+                [disabled]="!oProveedorForm?.valid"
+              >
+                <i class="bi bi-save"></i> Guardar
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div
+    class="modal fade"
+    [id]="'mimodal'"
+    tabindex="-1"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Mensaje</h5>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+            (click)="hideModal()"
+          ></button>
+        </div>
+        <div class="modal-body text-center">
+          <p class="fs-5">{{ strMessage }}</p>
+        </div>
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-bs-dismiss="modal"
+            (click)="hideModal()"
+          >
+            Cerrar
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
