--- a/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
+++ b/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
@@ -14,7 +14,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" [class.active]="strRuta == '/'"
-            href="admin/proveedores/plist">Proveedores</a>
+            href="admin/proveedor/plist">Proveedores</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [class.active]="strRuta == '/'"
